k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops-demo
  labels:
    owner: platform-security
    environment: demo
