k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-security-devsecops-demo
  namespace: devsecops-demo
spec:
  type: ClusterIP
  selector:
    app: cloud-security-devsecops-demo
  ports:
    - name: http
      port: 80
      targetPort: 8000
